# leap

./: .gitignore  .npmignore  CLAUDE.md  LICENSE  Makefile  README.md  install.sh  package.json  pyproject.toml  requirements.txt  setup.py  uninstall.sh
.claude/: settings.local.json
.claude/commands/: refactor.md
.claude/skills/: add-cli-provider.md  add-client-command.md  add-dialog.md  add-monitor-theme.md  create-macos-icon.md
assets/: claudeq-icon.icns  leap-icon.icns  model_prices.json
scripts/: diag_notif.py  diag_notif_plist.py  diag_notif_watch.py  diagnose-jetbrains-sweep.py
src/: activate_terminal.groovy  claudeq-auto.sh  claudeq-cleanup.sh  claudeq-client-pty.py  claudeq-client.py  claudeq-main-pty.sh  claudeq-main.sh  claudeq-monitor.py  claudeq-server-pty-socket.py  claudeq-server.py  claudeq-server.sh  cq-mo-wrapper.sh
src/claudeq/: __init__.py  main.py
src/leap/: __init__.py  main.py
src/scripts/: _leap  claude-leap-main.sh  claudeq-cleanup.sh  claudeq-client.py  claudeq-hook.sh  claudeq-main.sh  claudeq-monitor.py  claudeq-server.py  claudeq-slack.py  claudeq_monitor_launcher.py  codex-leap-main.sh  configure-shell-helper.sh  configure_claude_hooks.py  configure_codex_hooks.py  configure_hooks.py  configure_iterm2_csi_u.py  configure_jetbrains_xml.py  configure_wezterm_csi_u.py  copilot-leap-main.sh  cursor-agent-leap-main.sh  gemini-leap-main.sh  leap-claude-statusline.py  leap-cleanup.sh  leap-client.py  leap-codesign-setup.sh  leap-copilot-statusline.py  leap-cursor-statusline.py  leap-headroom-up.sh  leap-headroom-watchdog.sh  leap-headroom.sh  leap-hook-process.py  leap-hook.sh  leap-main.sh  leap-manage-clis.py  leap-monitor.py  leap-resume.py  leap-select-cli.py  leap-select-tag.py  leap-select.sh  leap-server.py  (+8 more)
tests/: conftest.py  test_capture_mode.py  test_menu_options.py  test_notes_undo.py  test_resume.py  test_state_integration.py  test_state_tracker.py
tests/integration/: test_auto_send_readiness.py  test_compact_scenarios.py  test_dialog_false_positives.py  test_escape_race.py  test_false_retrigger.py  test_input_protocols.py  test_interrupt_detection.py  test_interrupted_wedge.py  test_jetbrains_sweep.py  test_output_accumulation.py  test_output_edge_cases.py  test_prompt_snapshot.py  test_provider_behaviors.py  test_pty_lifecycle.py  test_rapid_transitions.py  test_resize_scenarios.py  test_resume_from_wait.py  test_resume_pipeline.py  test_signal_parsing.py  test_signal_transitions.py  test_slash_commands.py  test_trust_dialog.py  test_user_flows.py  test_waiting_wedge.py
tests/unit/: test_auto_send_mode_persistence.py  test_banner_notifications.py  test_bitbucket_provider.py  test_capture_mode.py  test_checklist_add_draft.py  test_churning_state.py  test_claude_select_option.py  test_claude_session_move.py  test_claude_statusline.py  test_cli_flags.py  test_cmux_support.py  test_columns.py  test_context_usage.py  test_copilot_provider.py  test_copilot_statusline.py  test_cost_usage.py  test_cursor_agent_context.py  test_cursor_gui_scan.py  test_cursor_refresh_and_request.py  test_cursor_row_reconcile.py  test_cursor_statusline.py  test_default_terminal.py  test_dialog_action_preservation.py  test_github_config_url.py  test_github_provider.py  test_gitlab_provider.py  test_hooks_installed.py  test_jetbrains_alias.py  test_last_user_prompt.py  test_line_buffer.py  test_menu_options.py  test_merge_sessions_auto_send.py  test_merged_closed_pr.py  test_move_to_ide_detection.py  test_navigation_pid_fallback.py  test_notes_helpers.py  test_notes_undo.py  test_notification_permission_check.py  (+20 more)
(+214 files in other folders)
